--- a/Com.Ericmas001.Rpi.Gpio/Com.Ericmas001.Rpi.Gpio.csproj
+++ b/Com.Ericmas001.Rpi.Gpio/Com.Ericmas001.Rpi.Gpio.csproj
@@ -2,7 +2,21 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <Description>Com.Ericmas001.Rpi.Gpio</Description>
+    <Version>0.1.0</Version>
+    <Company>Ericmas001</Company>
+    <Authors>Ericmas001</Authors>
+    <PackageLicenseUrl>https://raw.githubusercontent.com/Com-Ericmas001/Rpi/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/Com-Ericmas001/Rpi</PackageProjectUrl>
+    <PackageIconUrl>https://github.com/Com-Ericmas001/Common/raw/master/Resources/lib.png</PackageIconUrl>
+    <RepositoryUrl>https://github.com/Com-Ericmas001/Rpi</RepositoryUrl>
+    <RepositoryType>Git</RepositoryType>
+    <PackageTags>Development Version</PackageTags>
+    <NeutralLanguage>English</NeutralLanguage>
   </PropertyGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Com.Ericmas001.Logs" Version="0.1.2" />
