--- a/Com.Ericmas001.Rpi.DemoWindows/Com.Ericmas001.Rpi.DemoWindows.csproj
+++ b/Com.Ericmas001.Rpi.DemoWindows/Com.Ericmas001.Rpi.DemoWindows.csproj
@@ -97,6 +97,9 @@
   <ItemGroup>
     <Compile Include="Implementations\MyGpioPin.cs" />
     <Compile Include="Implementations\MyGpioController.cs" />
+    <Compile Include="Implementations\MyPwmController.cs" />
+    <Compile Include="Implementations\MyPwmPin.cs" />
+    <Compile Include="Implementations\MyPwmProvider.cs" />
     <Compile Include="StartupTask.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -138,10 +141,7 @@
       <Version>0.2.0</Version>
     </PackageReference>
     <PackageReference Include="Com.Ericmas001.Logs">
-      <Version>0.1.2</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.IoT.Devices">
-      <Version>1.0.8</Version>
+      <Version>0.1.3</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.0.8</Version>
